added html docs
